Ensure nested scrollers clip contents.

When painting composited overflow, kPaintLayerPaintingOverflowContents
is set to paint all content. When painting a nested, transformed
scroller, we need to ensure this flag is unset so the contents
are clipped.

Because root layer scrolling (RLS) paints the root layer as a regular
overflow scroller, this bug affected more tests with RLS. With this
patch, 5 more tests pass with root layer scrolling.

Bug: 779885
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I311cfa9e3244192b24ec3dd566aa2c65e9dba851
Reviewed-on: https://chromium-review.googlesource.com/748081
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513045}
Former-commit-id: 19f7cb8adfd015bef06b08d0c02eb5a528e8c885