third_party/WebKit/Source/core/paint/PaintLayerPainter.cpp
@@ -853,9 +853,12 @@ PaintResult PaintLayerPainter::PaintFragmentByApplyingTransform(
   transformed_painting_info.ancestor_has_clip_path_clipping =
       painting_info.ancestor_has_clip_path_clipping;
 
-  // Remove skip root background flag when we're painting with a new root.
-  if (&paint_layer_ != painting_info.root_layer)
+  if (&paint_layer_ != painting_info.root_layer) {
+    // Remove skip root background flag when we're painting with a new root.
     paint_flags &= ~kPaintLayerPaintingSkipRootBackground;
+    // When painting a new root we are no longer painting overflow contents.
+    paint_flags &= ~kPaintLayerPaintingOverflowContents;
+  }
 
   return PaintLayerContentsCompositingAllPhases(
       context, transformed_painting_info, paint_flags, kForceSingleFragment);
